cluster_config/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - http:
      paths:
      - path: /home # by path
        backend:
          serviceName: home-website-service
          servicePort: 80
  - host: home.samsja.fr # by host header
    http:
      paths:
      - path: /
        backend:
          serviceName: home-website-service
          servicePort: 80
  tls:
  - hosts:
    - home.samsja.fr
    secretName: samsja-cloud-tls
