cluster_config/ingress/nextcloud.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: nextcloud
  name: nextcloud-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"

spec:

  rules:
  - host: "nextcloud.samsja.fr" # Host to access nextcloud
    http:
      paths:
        - path: /  # We will access NextCloud via the URL https://nextcloud.<domain.com>/
          backend:
            serviceName: "nextcloud" # Mapping to the service (see kubectl get services -n nextcloud)
            servicePort: 8080 # Mapping to the port (see kubectl get services -n nextcloud)
  tls:
  - hosts:
    - "nextcloud.samsja.fr" # Host to access nextcloud
    secretName: "samsja-cloud-tls" # Name of the certifciate (see kubectl get certificate -A)
